--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,19 @@
 <resources>
     <string name="host_name">dipselmedia.net</string>
-
     <string name="app_name">Daily-Agenda</string>
+
     <string name="home_button1">Ich</string>
     <string name="home_button2">Gruppen</string>
     <string name="create_group">Gruppe erstellen</string>
+    <string name="createGroup_text">Neue Gruppe erstellen</string>
+    <string name="createGroup_name">Gruppenname</string>
+
     <string name="notes">Notizen</string>
-    <string name="calendar">Kalender</string>
+    <string name="voting">Abstimmung</string>
     <string name="fridge">Kühlschrank</string>
     <string name="finances">Finanzen</string>
     <string name="map">Karte</string>
-    <string name="createGroup_text">Neue Gruppe erstellen</string>
-    <string name="createGroup_name">Gruppenname</string>
+
     <string name="increase">+</string>
     <string name="decrease">-</string>
 
@@ -25,4 +27,23 @@
     <string name="set_Name">Diesen Namen verwenden</string>
 
     <string name="add_user_group">Nutzer hinzufügen</string>
+
+    <string name="createVoting">Abstimmung erstellen</string>
+    <string name="createVoting_text">Neue Abstimmung erstellen</string>
+    <string name="createVoting_name">Name der Abstimmung</string>
+    <string name="createVoting_choice_hint">Antwortmöglichkeit eingeben</string>
+    <string name="createVoting_choice_add">Antwort hinzufügen</string>
+
+    <string name="header_notes">Notizen</string>
+    <string name="add_note_hint">Neue Notiz</string>
+    <string name="set_date_hint">Datum setzen</string>
+    <string name="sort_by_date">Sort by Date</string>
+
+    <string name="finances_budget_text">Dein aktuelles Budget:</string>
+    <string name="finances_budget_default">00,0</string>
+    <string name="finances_revenue_text">Neuer Betrag:</string>
+    <string name="finances_revenue_default">000,00</string>
+    <string name="finances_button_add">Hinzufügen</string>
+    <string name="finances_button_withdraw">Abziehen</string>
+    <string name="finances_last_revenues_text">Deine letzten Umsätze:</string>
 </resources>
